# inhibitor

./: Cargo.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: xky4a7v85qj9icj41a9garb8n6s8w47s-source
src/: codec.rs  daemon.rs  main.rs
