[package]
name = "inhibitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.7", features = ["derive"] }
fork = "0.1.23"
futures = "0.3.30"
rkyv = { version = "0.7.44", features = ["validation"] }
tokio = { version = "1.38.0", features = ["net", "rt", "sync", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
zbus = "4.3.0"
